--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
     position: absolute;
     left: 0;
     color: aliceblue;
-    font-size: xx-large;
+    font-size: x-large;
     font-family: 'Open Sans', sans-serif;
 }
 
