--- a/style.css
+++ b/style.css
@@ -71,14 +71,14 @@ body {
 }
 
 #profilepic {
-    height: 300px;
-    width: 300px;
+    height: 250px;
+    width: 250px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    bottom: -150px;
+    bottom: -100px;
     transition: all o.3s ease;
     z-index: 2;
     background-color: black;
@@ -155,7 +155,7 @@ body {
 #cirTi {
     height: 75%;
     width: 70%;
-    border: solid 3px black;
+/*     border: solid 3px black; */
     display: flex;
     align-items: center;
     justify-content: space-evenly;
